# cli-toolset

./: .gitignore  LICENSE
wc/: CMakeLists.txt  README.md  build.sh  debug.bat  run.bat
wc/include/: file_utils.hpp  wc.hpp
wc/src/: main.cpp  wc.cpp
wc/src/operations/: count_bytes.cpp  count_bytes.hpp  count_characters.cpp  count_characters.hpp  count_lines.cpp  count_lines.hpp  count_words.cpp  count_words.hpp  operation.hpp
